ZCS-13036: Translations added

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2773,3 +2773,12 @@ ERROR_RPExists = La pol\u00edtica "{0}" ja existeix.
 multiple_servers = servidors m\u00faltiples
 ERROR_INVALID_FILE_NAME = El nom del fitxer no \u00e9s v\u00e0lid. Feu servir el bot\u00f3 de navegaci\u00f3 per seleccionar un fitxer v\u00e0lid.
 
+Alert_Sieve = Aquestes regles de filtre Sieve nom\u00e9s les poden veure i modificar els administradors.
+LBL_zimbraAdminSieveScriptAfter = Regles de filtraci\u00f3 aplicades despr\u00e9s dels filtres de l'usuari final:
+LBL_zimbraAdminSieveScriptBefore = Regles de filtraci\u00f3 aplicades abans dels filtres d'usuari final:
+LBL_zimbraInterceptAddress = Adre\u00e7a d'intercepci\u00f3 legal:
+LBL_zimbraInterceptSendHeadersOnly = Nom\u00e9s cap\u00e7aleres d'intercepci\u00f3 legal:
+LBL_zimbraSieveEditHeaderEnabled = Edita les ordres de la cap\u00e7alera:
+LBL_zimbraSieveRejectMailEnabled = Acci\u00f3 de "rebutjar" del tamís:
+NAD_AdminSieveGrouper = Regles de filtre de garbell
+NAD_LegalInterceptGrouper = Interceptaci\u00f3 legal
