--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2682,3 +2682,13 @@ ERROR_InvalidRPLifetime = Omr\u00e5det skal v\u00e6r et positivt heltal.
 ERROR_RPExists = Politik "{0}" findes allerede.
 multiple_servers = flere servere
 ERROR_INVALID_FILE_NAME = Ugyldigt filnavn. Brug knappen Gennemse til at v\u00e6lge en gyldig fil.
+
+Alert_Sieve = Disse Sieve-filterregler kan kun ses og \u00e6ndres af administratorer.
+LBL_zimbraAdminSieveScriptAfter = Sigteregler anvendt efter slutbrugerfiltre:
+LBL_zimbraAdminSieveScriptBefore = Sigteregler anvendt f\u00f8r slutbrugerfiltre:
+LBL_zimbraInterceptAddress = Juridisk aflytningsadresse:
+LBL_zimbraInterceptSendHeadersOnly = Kun juridiske aflytning-headers:
+LBL_zimbraSieveEditHeaderEnabled = Rediger overskriftskommandoer:
+LBL_zimbraSieveRejectMailEnabled = Sigt "afvis" handling:
+NAD_AdminSieveGrouper = Si filter regler
+NAD_LegalInterceptGrouper = Juridisk aflytning
