--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2746,3 +2746,13 @@ ERROR_InvalidRPLifetime = Der Bereich muss eine positive ganze Zahl sein.
 ERROR_RPExists = Die Regel "{0}" ist bereits vorhanden.
 multiple_servers = mehrere Server
 ERROR_INVALID_FILE_NAME = Ung\u00fcltiger Dateiname. Suchen Sie \u00fcber die Schaltfl\u00e4che nach einer g\u00fcltigen Datei.
+
+Alert_Sieve = Diese Sieve-Filterregeln k\u00f6nnen nur von Administratoren angezeigt und ge\u00e4ndert werden.
+LBL_zimbraAdminSieveScriptAfter = Nach Endbenutzerfiltern angewendete Siebregeln:
+LBL_zimbraAdminSieveScriptBefore = Siebregeln, die vor Endbenutzerfiltern angewendet werden:
+LBL_zimbraInterceptAddress = Legal Intercept-Adresse:
+LBL_zimbraInterceptSendHeadersOnly = Nur legale Intercept-Header:
+LBL_zimbraSieveEditHeaderEnabled = Header-Befehle bearbeiten:
+LBL_zimbraSieveRejectMailEnabled = Aktion "Ablehnen" des Siebs:
+NAD_AdminSieveGrouper = Siebfilterregeln
+NAD_LegalInterceptGrouper = Rechtliches Abfangen
