--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2756,3 +2756,13 @@ ERROR_InvalidRPLifetime = El rango debe ser un n\u00famero entero positivo.
 ERROR_RPExists = La pol\u00edtica "{0}" ya existe.
 multiple_servers = servidores m\u00faltiples
 ERROR_INVALID_FILE_NAME = Nombre de archivo no v\u00e1lido. Utiliza el bot\u00f3n Examinar para seleccionar un archivo v\u00e1lido.
+
+Alert_Sieve = Estas reglas de filtro Sieve solo pueden ser vistas y modificadas por los administradores.
+LBL_zimbraAdminSieveScriptAfter = Reglas de filtrado aplicadas despu\u00e9s de los filtros de usuario final:
+LBL_zimbraAdminSieveScriptBefore = Reglas de filtrado aplicadas antes de los filtros de usuario final:
+LBL_zimbraInterceptAddress = Direcci\u00f3n de interceptaci\u00f3n legal:
+LBL_zimbraInterceptSendHeadersOnly = Solo encabezados de intercepci\u00f3n legal:
+LBL_zimbraSieveEditHeaderEnabled = Editar comandos de encabezado:
+LBL_zimbraSieveRejectMailEnabled = Acci\u00f3n de "rechazo" del tamiz:
+NAD_AdminSieveGrouper = Reglas de filtro de tamiz
+NAD_LegalInterceptGrouper = Intercepci\u00f3n legal
