--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -2757,3 +2757,13 @@ ERROR_InvalidRPLifetime = La plage doit \u00eatre un nombre entier positif.
 ERROR_RPExists = La r\u00e8gle \u00ab\u00a0{0}\u00a0\u00bb existe d\u00e9j\u00e0.
 multiple_servers = serveurs multiples
 ERROR_INVALID_FILE_NAME = Nom de fichier incorrect. Pour s\u00e9lectionner un fichier correct, utilisez le bouton de navigation (Parcourir).
+
+Alert_Sieve = Ces r\u00e8gles de filtrage Sieve ne peuvent \u00eatre consult\u00e9es et modifi\u00e9es que par les administrateurs.
+LBL_zimbraAdminSieveScriptAfter = R\u00e8gles Sieve appliqu\u00e9es apr\u00e8s les filtres d'utilisateurs finaux :
+LBL_zimbraAdminSieveScriptBefore = R\u00e8gles Sieve appliqu\u00e9es apr\u00e8s avant les filtres d'utilisateurs finaux :
+LBL_zimbraInterceptAddress = Adresse d'interception l\u00e9gale :
+LBL_zimbraInterceptSendHeadersOnly = En-t\u00eates d'interception l\u00e9gale uniquement :
+LBL_zimbraSieveEditHeaderEnabled = Modifier les commandes d'en-t\u00eate :
+LBL_zimbraSieveRejectMailEnabled = Action "rejeter" du tamis :
+NAD_AdminSieveGrouper = R\u00e8gles de filtre tamis
+NAD_LegalInterceptGrouper = Interception l\u00e9gale
