--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2794,3 +2794,13 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
+
+Alert_Sieve = Ova pravila filtera Sieve mogu pregledavati i mijenjati samo administratori.
+LBL_zimbraAdminSieveScriptAfter = Pravila sita primijenjena nakon filtara krajnjeg korisnika:
+LBL_zimbraAdminSieveScriptBefore = Pravila sita primijenjena prije filtara krajnjeg korisnika:
+LBL_zimbraInterceptAddress = Adresa pravnog presretanja:
+LBL_zimbraInterceptSendHeadersOnly = Samo zaglavlja pravnog presretanja:
+LBL_zimbraSieveEditHeaderEnabled = Naredbe za ure\u0111ivanje zaglavlja:
+LBL_zimbraSieveRejectMailEnabled = Radnja "odbacivanja" sita:
+NAD_AdminSieveGrouper = Pravila filtera sita
+NAD_LegalInterceptGrouper = Pravno presretanje
