--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2782,3 +2782,13 @@ ERROR_InvalidRPLifetime = Ennek a tartom\u00e1nynak pozit\u00edv eg\u00e9sz sz\u
 ERROR_RPExists = A(z) \u201e{0}\u201d h\u00e1zirend m\u00e1r l\u00e9tezik.
 multiple_servers = t\u00f6bb kiszolg\u00e1l\u00f3
 ERROR_INVALID_FILE_NAME = \u00c9rv\u00e9nytelen f\u00e1jln\u00e9v. A Tall\u00f3z\u00e1s gombbal v\u00e1lasszon ki egy \u00e9rv\u00e9nyes f\u00e1jlt.
+
+Alert_Sieve = Ezeket a szitasz\u0171r\u0151 szab\u00e1lyokat csak a rendszergazd\u00e1k tekinthetik meg \u00e9s m\u00f3dos\u00edthatj\u00e1k.
+LBL_zimbraAdminSieveScriptAfter = A v\u00e9gfelhaszn\u00e1l\u00f3i sz\u0171r\u0151k ut\u00e1n alkalmazott szitaszab\u00e1lyok:
+LBL_zimbraAdminSieveScriptBefore = A v\u00e9gfelhaszn\u00e1l\u00f3i sz\u0171r\u0151k el\u0151tt alkalmazott szitaszab\u00e1lyok:
+LBL_zimbraInterceptAddress = Jogi lehallgat\u00e1si c\u00edm:
+LBL_zimbraInterceptSendHeadersOnly = Csak leg\u00e1lis elfog\u00f3 fejl\u00e9cek:
+LBL_zimbraSieveEditHeaderEnabled = Fejl\u00e9c parancsok szerkeszt\u00e9se:
+LBL_zimbraSieveRejectMailEnabled = Szita "elutas\u00edt\u00e1s" m\u0171velet:
+NAD_AdminSieveGrouper = Szitasz\u0171r\u0151 szab\u00e1lyok
+NAD_LegalInterceptGrouper = Legal Intercept
