--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2786,3 +2786,13 @@ ERROR_InvalidRPLifetime = Rentang harus berupa bilangan bulat positif.
 ERROR_RPExists = Kebijakan "{0}" sudah ada.
 multiple_servers = beberapa server
 ERROR_INVALID_FILE_NAME = Nama file tidak valid. Gunakan tombol telusuri untuk memilih file yang valid.
+
+Alert_Sieve = Aturan filter Saringan ini hanya dapat dilihat dan diubah oleh administrator.
+LBL_zimbraAdminSieveScriptAfter = Aturan ayakan diterapkan setelah filter pengguna akhir:
+LBL_zimbraAdminSieveScriptBefore = Aturan ayakan diterapkan sebelum filter pengguna akhir:
+LBL_zimbraInterceptAddress = Alamat Penyadapan Resmi:
+LBL_zimbraInterceptSendHeadersOnly = Header Intersep Legal Saja:
+LBL_zimbraSieveEditHeaderEnabled = Sunting perintah tajuk:
+LBL_zimbraSieveRejectMailEnabled = Saringan tindakan "tolak":
+NAD_AdminSieveGrouper = Aturan saringan saringan
+NAD_LegalInterceptGrouper = Intersepsi Hukum
