--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2682,3 +2682,13 @@ ERROR_InvalidRPLifetime = L\u2019intervallo deve essere indicato da un numero in
 ERROR_RPExists = Il criterio "{0}" esiste gi\u00e0.
 multiple_servers = pi\u00f9 server
 ERROR_INVALID_FILE_NAME = Nome file non valido. Usa il pulsante Sfoglia per selezionare un file valido.
+
+Alert_Sieve = Queste regole del filtro Sieve possono essere visualizzate e modificate solo dagli amministratori.
+LBL_zimbraAdminSieveScriptAfter = Regole del setaccio applicate dopo i filtri dell'utente finale:
+LBL_zimbraAdminSieveScriptBefore = Regole del setaccio applicate prima dei filtri dell'utente finale:
+LBL_zimbraInterceptAddress = Indirizzo di intercettazione legale:
+LBL_zimbraInterceptSendHeadersOnly = Solo intestazioni di intercettazione legale:
+LBL_zimbraSieveEditHeaderEnabled = Modifica i comandi dell'intestazione:
+LBL_zimbraSieveRejectMailEnabled = Azione di "rifiuto" del setaccio:
+NAD_AdminSieveGrouper = Regole del filtro a setaccio
+NAD_LegalInterceptGrouper = Intercettazione legale
