--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2726,3 +2726,12 @@ ERROR_RPExists = "{0}" \uc815\ucc45\uc740 \uc774\ubbf8 \uc788\uc2b5\ub2c8\ub2e4.
 multiple_servers = \uc5ec\ub7ec \uc11c\ubc84
 ERROR_INVALID_FILE_NAME = \ud30c\uc77c \uc774\ub984\uc774 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. \ucc3e\uc544\ubcf4\uae30 \ubc84\ud2bc\uc744 \uc0ac\uc6a9\ud558\uc5ec \uc62c\ubc14\ub978 \ud30c\uc77c\uc744 \uc120\ud0dd\ud558\uc138\uc694.
 
+Alert_Sieve = \uc774\ub7ec\ud55c Sieve \ud544\ud130 \uaddc\uce59\uc740 \uad00\ub9ac\uc790\ub9cc \ubcf4\uace0 \uc218\uc815\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
+LBL_zimbraAdminSieveScriptAfter = \ucd5c\uc885 \uc0ac\uc6a9\uc790 \ud544\ud130\ub9c1 \ud6c4 \uc801\uc6a9\ub418\ub294 \uc2dc\ube0c(Sieve) \uaddc\uce59:
+LBL_zimbraAdminSieveScriptBefore = \ucd5c\uc885 \uc0ac\uc6a9\uc790 \ud544\ud130 \uc804\uc5d0 \uc801\uc6a9\ub418\ub294 \uc2dc\ube0c(Sieve) \uaddc\uce59:
+LBL_zimbraInterceptAddress = \ubc95\uc801 \ucc28\ub2e8 \uc8fc\uc18c:
+LBL_zimbraInterceptSendHeadersOnly = Legal Intercept \ud5e4\ub354\ub9cc \ud574\ub2f9:
+LBL_zimbraSieveEditHeaderEnabled = \ud5e4\ub354 \uba85\ub839 \ud3b8\uc9d1:
+LBL_zimbraSieveRejectMailEnabled = \uccb4 "\uac70\ubd80" \uc791\uc5c5:
+NAD_AdminSieveGrouper = \uccb4 \ud544\ud130 \uaddc\uce59
+NAD_LegalInterceptGrouper = \ubc95\uc801 \ucc28\ub2e8
