--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2783,3 +2783,12 @@ ERROR_RPExists = Polisi "{0}" sudah wujud.
 multiple_servers = berbilang pelayan
 ERROR_INVALID_FILE_NAME = Nama fail tidak sah. Gunakan butang pelayar untuk memilih fail yang sah.
 
+Alert_Sieve = Peraturan penapis penapis ini hanya boleh dilihat dan diubah suai oleh pentadbir.
+LBL_zimbraAdminSieveScriptAfter = Peraturan penapis digunakan selepas penapis pengguna akhir:
+LBL_zimbraAdminSieveScriptBefore = Peraturan penapis digunakan sebelum penapis pengguna akhir:
+LBL_zimbraInterceptAddress = Alamat Pintasan Undang-undang:
+LBL_zimbraInterceptSendHeadersOnly = Tajuk Pintasan Undang-undang Sahaja:
+LBL_zimbraSieveEditHeaderEnabled = Edit arahan pengepala:
+LBL_zimbraSieveRejectMailEnabled = Tapis tindakan "tolak":
+NAD_AdminSieveGrouper = Peraturan penapis penapis
+NAD_LegalInterceptGrouper = Pintasan Undang-undang
