--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2683,3 +2683,12 @@ ERROR_RPExists = Beleid "{0}" bestaat al.
 multiple_servers = meerdere servers
 ERROR_INVALID_FILE_NAME = Ongeldige bestandsnaam. Gebruik de bladerknop om een geldig bestand te selecteren.
 
+Alert_Sieve = Deze Sieve-filterregels kunnen alleen worden bekeken en gewijzigd door beheerders.
+LBL_zimbraAdminSieveScriptAfter = Zeefregels toegepast na eindgebruikersfilters:
+LBL_zimbraAdminSieveScriptBefore = Zeefregels toegepast v\u00f3\u00f3r filters voor eindgebruikers:
+LBL_zimbraInterceptAddress = Juridisch onderscheppingsadres:
+LBL_zimbraInterceptSendHeadersOnly = Alleen juridische onderscheppingskoppen:
+LBL_zimbraSieveEditHeaderEnabled = Koptekstopdrachten bewerken:
+LBL_zimbraSieveRejectMailEnabled = Zeef "weigeren" actie:
+NAD_AdminSieveGrouper = Zeeffilter regels
+NAD_LegalInterceptGrouper = Juridische onderschepping
