--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2788,3 +2788,12 @@ ERROR_RPExists = Policyen "{0}" eksisterer allerede.
 multiple_servers = flere servere
 ERROR_INVALID_FILE_NAME = Ugyldig filnavn. Bruk Bla gjennom-knappen for \u00e5 velge en gyldig fil.
 
+Alert_Sieve = Disse Sieve-filterreglene kan bare sees og endres av administratorer.
+LBL_zimbraAdminSieveScriptAfter = Silregler brukt etter sluttbrukerfiltre:
+LBL_zimbraAdminSieveScriptBefore = Silregler brukt f\u00f8r sluttbrukerfiltre:
+LBL_zimbraInterceptAddress = Juridisk avskj\u00e6ringsadresse:
+LBL_zimbraInterceptSendHeadersOnly = Kun juridiske avskj\u00e6ringshoder:
+LBL_zimbraSieveEditHeaderEnabled = Rediger overskriftskommandoer:
+LBL_zimbraSieveRejectMailEnabled = Sil "avvis" handling:
+NAD_AdminSieveGrouper = Sikt filter regler
+NAD_LegalInterceptGrouper = Juridisk avskj\u00e6ring
