--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2772,3 +2772,12 @@ ERROR_RPExists = Zasada "{0}" ju\u017c istnieje.
 multiple_servers = grupy serwer\u00f3w
 ERROR_INVALID_FILE_NAME = Nieprawid\u0142owa nazwa pliku. U\u017cyj przycisku Przegl\u0105daj, aby wybra\u0107 poprawny plik.
 
+Alert_Sieve = Te regu\u0142y filtrowania sita mog\u0105 by\u0107 przegl\u0105dane i modyfikowane tylko przez administrator\u00f3w.
+LBL_zimbraAdminSieveScriptAfter = Regu\u0142y sita zastosowane po filtrach u\u017cytkownika ko\u0144cowego:
+LBL_zimbraAdminSieveScriptBefore = Regu\u0142y sita zastosowane przed filtrami u\u017cytkownika ko\u0144cowego:
+LBL_zimbraInterceptAddress = Legalny adres przechwycenia:
+LBL_zimbraInterceptSendHeadersOnly = Tylko legalne nag\u0142\u00f3wki przechwytuj\u0105ce:
+LBL_zimbraSieveEditHeaderEnabled = Edytuj polecenia nag\u0142\u00f3wka:
+LBL_zimbraSieveRejectMailEnabled = Akcja sita \u201eodrzu\u0107\u201d:
+NAD_AdminSieveGrouper = Zasady filtrowania sitowego
+NAD_LegalInterceptGrouper = Przechwycenie prawne
