--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2681,3 +2681,13 @@ ERROR_InvalidRPLifetime = O intervalo deve ser um n\u00famero inteiro positivo.
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
 ERROR_INVALID_FILE_NAME = Nome de arquivo inv\u00e1lido. Use o bot\u00e3o procurar para selecionar um arquivo v\u00e1lido.
+
+Alert_Sieve = Essas regras de filtragem do Sieve s\u00f3 podem ser visualizadas e modificadas por administradores.
+LBL_zimbraAdminSieveScriptAfter = Regras de peneira aplicadas ap\u00f3s os filtros do usu\u00e1rio final:
+LBL_zimbraAdminSieveScriptBefore = Regras de peneira aplicadas antes dos filtros de usu\u00e1rio final:
+LBL_zimbraInterceptAddress = Endere\u00e7o de intercepta\u00e7\u00e3o legal:
+LBL_zimbraInterceptSendHeadersOnly = Somente cabe\u00e7alhos de intercepta\u00e7\u00e3o legal:
+LBL_zimbraSieveEditHeaderEnabled = Editar comandos de cabe\u00e7alho:
+LBL_zimbraSieveRejectMailEnabled = A\u00e7\u00e3o "rejeitar" da peneira:
+NAD_AdminSieveGrouper = Regras de filtro de peneira
+NAD_LegalInterceptGrouper = Intercepta\u00e7\u00e3o legal
