--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2782,3 +2782,13 @@ ERROR_InvalidRPLifetime = Intervalul trebuie s\u0103 fie un num\u0103r \u00eentr
 ERROR_RPExists = Politica \u201e{0}\u201d exist\u0103 deja.
 multiple_servers = servere multiple
 ERROR_INVALID_FILE_NAME = Nume de fi\u015fier nevalabil. Utiliza\u0163i butonul de r\u0103sfoire pentru a selecta un fi\u015fier valabil.
+
+Alert_Sieve = Aceste reguli de filtrare Sieve pot fi vizualizate \u0219i modificate numai de administratori.
+LBL_zimbraAdminSieveScriptAfter = Reguli de sit\u0103 aplicate dup\u0103 filtrele utilizatorului final:
+LBL_zimbraAdminSieveScriptBefore = Reguli de sit\u0103 aplicate \u00eenainte de filtrele utilizatorului final:
+LBL_zimbraInterceptAddress = Adresa legal\u0103 de interceptare:
+LBL_zimbraInterceptSendHeadersOnly = Numai anteturi de interceptare legal\u0103:
+LBL_zimbraSieveEditHeaderEnabled = Edita\u021bi comenzile antetului:
+LBL_zimbraSieveRejectMailEnabled = Ac\u021biune de \u201erespingere\u201d a sit\u0103:
+NAD_AdminSieveGrouper = Reguli de filtrare cu sit\u0103
+NAD_LegalInterceptGrouper = Interceptare legal\u0103
