--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2783,3 +2783,12 @@ ERROR_RPExists = Pravilnik "{0}"  \u017ee obstaja.
 multiple_servers = ve\u010d stre\u017enikov
 ERROR_INVALID_FILE_NAME = Neveljavno ime datoteke. Uporabite gumb brskalnika za izbiro veljavne datoteke.
 
+Alert_Sieve = Ta pravila filtra Sieve si lahko ogledujejo in spreminjajo samo skrbniki.
+LBL_zimbraAdminSieveScriptAfter = Pravila presejanja, uporabljena po filtrih kon\u010dnega uporabnika:
+LBL_zimbraAdminSieveScriptBefore = Pravila sita, uporabljena pred filtri kon\u010dnega uporabnika:
+LBL_zimbraInterceptAddress = Naslov pravnega prestrezanja:
+LBL_zimbraInterceptSendHeadersOnly = Samo glave pravnega prestrezanja:
+LBL_zimbraSieveEditHeaderEnabled = Ukazi za urejanje glave:
+LBL_zimbraSieveRejectMailEnabled = Dejanje "zavrnitve" sita:
+NAD_AdminSieveGrouper = Pravila sitastega filtra
+NAD_LegalInterceptGrouper = Pravni intercept
