--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2682,3 +2682,13 @@ ERROR_InvalidRPLifetime = Intervallet m\u00e5ste best\u00e5 av ett positivt helt
 ERROR_RPExists = Principen "{0}" finns redan.
 multiple_servers = flera servrar
 ERROR_INVALID_FILE_NAME = Ogiltigt filnamn. V\u00e4lj en giltig fil med bl\u00e4ddringsknappen.
+
+Alert_Sieve = Dessa Sieve-filterregler kan endast ses och \u00e4ndras av administrat\u00f6rer.
+LBL_zimbraAdminSieveScriptAfter = Siktregler som till\u00e4mpas efter slutanv\u00e4ndarfilter:
+LBL_zimbraAdminSieveScriptBefore = Siktregler som till\u00e4mpas f\u00f6re slutanv\u00e4ndarfiltren:
+LBL_zimbraInterceptAddress = Juridisk avlyssningsadress:
+LBL_zimbraInterceptSendHeadersOnly = Endast juridiska sp\u00e4rrrubriker:
+LBL_zimbraSieveEditHeaderEnabled = Redigera rubrikkommandon:
+LBL_zimbraSieveRejectMailEnabled = Sikta "avvisa" \u00e5tg\u00e4rd:
+NAD_AdminSieveGrouper = Siktfilterregler
+NAD_LegalInterceptGrouper = Juridisk avlyssning
