--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2777,3 +2777,12 @@ ERROR_RPExists = "{0}" ilkesi zaten var.
 multiple_servers = birden fazla sunucu
 ERROR_INVALID_FILE_NAME = Ge\u00e7ersiz dosya ad\u0131. Ge\u00e7erli bir lisans dosyas\u0131 se\u00e7mek i\u00e7in G\u00f6zat d\u00fc\u011fmesini se\u00e7in.
 
+Alert_Sieve = Bu Elek filtresi kurallar\u0131 yaln\u0131zca y\u00d6neticiler taraf\u0131ndan g\u00d6r\u00dcnt\u00dclenebilir ve de\u011fi\u015ftirilebilir.
+LBL_zimbraAdminSieveScriptAfter = Son kullan\u0131c\u0131 filtrelerinden sonra uygulanan eleme kurallar\u0131:
+LBL_zimbraAdminSieveScriptBefore = Son kullan\u0131c\u0131 filtrelerinden \u00d6nce uygulanan eleme kurallar\u0131:
+LBL_zimbraInterceptAddress = Yasal Durdurma Adresi:
+LBL_zimbraInterceptSendHeadersOnly = Yaln\u0131zca Yasal \u00d6nleme Ba\u015fl\u0131klar\u0131:
+LBL_zimbraSieveEditHeaderEnabled = Ba\u015fl\u0131k komutlar\u0131n\u0131 d\u00fczenle:
+LBL_zimbraSieveRejectMailEnabled = Elek "reddetme" eylemi:
+NAD_AdminSieveGrouper = Elek filtre kurallar\u0131
+NAD_LegalInterceptGrouper = Yasal Durdurma
