--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2767,3 +2767,13 @@ ERROR_InvalidRPLifetime = \u8303\u56f4\u5fc5\u987b\u662f\u6b63\u6574\u6570\u3002
 ERROR_RPExists = \u653f\u7b56\u201c{0}\u201d\u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u4e2a\u670d\u52a1\u5668
 ERROR_INVALID_FILE_NAME = \u6587\u4ef6\u540d\u65e0\u6548\u3002\u8bf7\u7528\u6d4f\u89c8\u6309\u94ae\u9009\u62e9\u6709\u6548\u7684\u6587\u4ef6\u3002
+
+Alert_Sieve = \u8fd9\u4e9b Sieve \u8fc7\u6ee4\u89c4\u5219\u53ea\u80fd\u7531\u7ba1\u7406\u5458\u67e5\u770b\u548c\u4fee\u6539\u3002
+LBL_zimbraAdminSieveScriptAfter = \u5728\u6700\u7ec8\u7528\u6237\u8fc7\u6ee4\u5668\u4e4b\u540e\u5e94\u7528\u7684\u7b5b\u9009\u89c4\u5219\uff1a
+LBL_zimbraAdminSieveScriptBefore = \u5728\u6700\u7ec8\u7528\u6237\u8fc7\u6ee4\u5668\u4e4b\u524d\u5e94\u7528\u7684\u7b5b\u9009\u89c4\u5219\uff1a
+LBL_zimbraInterceptAddress = \u5408\u6cd5\u62e6\u622a\u5730\u5740\uff1a
+LBL_zimbraInterceptSendHeadersOnly = \u4ec5\u5408\u6cd5\u62e6\u622a\u6807\u5934\uff1a
+LBL_zimbraSieveEditHeaderEnabled = \u7f16\u8f91\u6807\u9898\u547d\u4ee4\uff1a
+LBL_zimbraSieveRejectMailEnabled = \u7b5b\u9009\u201c\u5254\u9664\u201d\u52a8\u4f5c\uff1a
+NAD_AdminSieveGrouper = \u7b5b\u7f51\u8fc7\u6ee4\u89c4\u5219
+NAD_LegalInterceptGrouper = \u5408\u6cd5\u62e6\u622a
