--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2773,3 +2773,13 @@ ERROR_InvalidRPLifetime = Zehaztutako bolumen-bidea ez da baliozkoa
 ERROR_RPExists = "{0}" politika ez dago.
 multiple_servers = zerbitzari anitzak
 ERROR_INVALID_FILE_NAME = Fitxategiaren izenak ez du balio. Erabili arakatzeko botoia balio duen fitxategia hautatzeko.
+
+Alert_Sieve = Sieve iragazkien arau hauek administratzaileek soilik ikusi eta alda ditzakete.
+LBL_zimbraAdminSieveScriptAfter = Azken erabiltzaileen iragazkien ondoren aplikatutako bahe-arauak:
+LBL_zimbraAdminSieveScriptBefore = Azken erabiltzaileen iragazkien aurretik aplikatutako bahe-arauak:
+LBL_zimbraInterceptAddress = Lege-atzemateko helbidea:
+LBL_zimbraInterceptSendHeadersOnly = Legezko atzemateko goiburuak soilik:
+LBL_zimbraSieveEditHeaderEnabled = Editatu goiburuko komandoak:
+LBL_zimbraSieveRejectMailEnabled = Bahe "baztertu" ekintza:
+NAD_AdminSieveGrouper = Bahe-iragazkien arauak
+NAD_LegalInterceptGrouper = Legezko atzematea
