--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -2788,3 +2788,12 @@ ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
 ERROR_INVALID_FILE_NAME = Nome de ficheiro inv\u00e1lido. Utilize o bot\u00e3o Procurar para selecionar um ficheiro v\u00e1lido.
 
+Alert_Sieve = Essas regras de filtragem do Sieve s\u00f3 podem ser visualizadas e modificadas por administradores.
+LBL_zimbraAdminSieveScriptAfter = Regras de peneira aplicadas ap\u00f3s os filtros do usu\u00e1rio final:
+LBL_zimbraAdminSieveScriptBefore = Regras de peneira aplicadas antes dos filtros de usu\u00e1rio final:
+LBL_zimbraInterceptAddress = Endere\u00e7o de intercepta\u00e7\u00e3o legal:
+LBL_zimbraInterceptSendHeadersOnly = Somente cabe\u00e7alhos de intercepta\u00e7\u00e3o legal:
+LBL_zimbraSieveEditHeaderEnabled = Editar comandos de cabe\u00e7alho:
+LBL_zimbraSieveRejectMailEnabled = A\u00e7\u00e3o "rejeitar" da peneira:
+NAD_AdminSieveGrouper = Regras de filtro de peneira
+NAD_LegalInterceptGrouper = Intercepta\u00e7\u00e3o legal
