--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -2781,3 +2781,12 @@ ERROR_RPExists = \u0e19\u0e42\u0e22\u0e1a\u0e32\u0e22 "{0}" \u0e21\u0e35\u0e2d\u
 multiple_servers = \u0e2b\u0e25\u0e32\u0e22\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
 ERROR_INVALID_FILE_NAME = \u0e0a\u0e37\u0e48\u0e2d\u0e44\u0e1f\u0e25\u0e4c\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07 \u0e43\u0e0a\u0e49\u0e1b\u0e38\u0e48\u0e21 \u0e40\u0e23\u0e35\u0e22\u0e01\u0e14\u0e39 \u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07
 
+Alert_Sieve = \u0e01\u0e0e\u0e15\u0e31\u0e27\u0e01\u0e23\u0e2d\u0e07\u0e15\u0e30\u0e41\u0e01\u0e23\u0e07\u0e40\u0e2b\u0e25\u0e48\u0e32\u0e19\u0e35\u0e49\u0e2a\u0e32\u0e21\u0e32\u0e23\u0e16\u0e14\u0e39\u0e41\u0e25\u0e30\u0e41\u0e01\u0e49\u0e44\u0e02\u0e44\u0e14\u0e49\u0e42\u0e14\u0e22\u0e1c\u0e39\u0e49\u0e14\u0e39\u0e41\u0e25\u0e23\u0e30\u0e1a\u0e1a\u0e40\u0e17\u0e48\u0e32\u0e19\u0e31\u0e49\u0e19
+LBL_zimbraAdminSieveScriptAfter = \u0e01\u0e0e\u0e15\u0e30\u0e41\u0e01\u0e23\u0e07\u0e17\u0e35\u0e48\u0e43\u0e0a\u0e49\u0e2b\u0e25\u0e31\u0e07\u0e08\u0e32\u0e01\u0e15\u0e31\u0e27\u0e01\u0e23\u0e2d\u0e07\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e1b\u0e25\u0e32\u0e22\u0e17\u0e32\u0e07:
+LBL_zimbraAdminSieveScriptBefore = \u0e43\u0e0a\u0e49\u0e01\u0e0e\u0e15\u0e30\u0e41\u0e01\u0e23\u0e07\u0e01\u0e48\u0e2d\u0e19\u0e15\u0e31\u0e27\u0e01\u0e23\u0e2d\u0e07\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e1b\u0e25\u0e32\u0e22\u0e17\u0e32\u0e07:
+LBL_zimbraInterceptAddress = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e01\u0e32\u0e23\u0e2a\u0e01\u0e31\u0e14\u0e01\u0e31\u0e49\u0e19\u0e17\u0e32\u0e07\u0e01\u0e0e\u0e2b\u0e21\u0e32\u0e22:
+LBL_zimbraInterceptSendHeadersOnly = \u0e2a\u0e48\u0e27\u0e19\u0e2b\u0e31\u0e27\u0e02\u0e2d\u0e07\u0e01\u0e32\u0e23\u0e2a\u0e01\u0e31\u0e14\u0e01\u0e31\u0e49\u0e19\u0e17\u0e32\u0e07\u0e01\u0e0e\u0e2b\u0e21\u0e32\u0e22\u0e40\u0e17\u0e48\u0e32\u0e19\u0e31\u0e49\u0e19:
+LBL_zimbraSieveEditHeaderEnabled = \u0e41\u0e01\u0e49\u0e44\u0e02\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07\u0e2a\u0e48\u0e27\u0e19\u0e2b\u0e31\u0e27:
+LBL_zimbraSieveRejectMailEnabled = \u0e15\u0e30\u0e41\u0e01\u0e23\u0e07 "\u0e1b\u0e0f\u0e34\u0e40\u0e2a\u0e18" \u0e01\u0e32\u0e23\u0e01\u0e23\u0e30\u0e17\u0e33:
+NAD_AdminSieveGrouper = \u0e01\u0e0e\u0e01\u0e32\u0e23\u0e01\u0e23\u0e2d\u0e07\u0e15\u0e30\u0e41\u0e01\u0e23\u0e07
+NAD_LegalInterceptGrouper = \u0e01\u0e32\u0e23\u0e2a\u0e01\u0e31\u0e14\u0e01\u0e31\u0e49\u0e19\u0e17\u0e32\u0e07\u0e01\u0e0e\u0e2b\u0e21\u0e32\u0e22
