--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2788,3 +2788,12 @@ ERROR_RPExists = Ch\u00ednh s\u00e1ch "{0}" \u0111\u00e3 t\u1ed3n t\u1ea1i.
 multiple_servers = nhi\u1ec1u m\u00e1y ch\u1ee7
 ERROR_INVALID_FILE_NAME = T\u00ean t\u1eadp tin kh\u00f4ng h\u1ee3p l\u1ec7. S\u1eed d\u1ee5ng n\u00fat duy\u1ec7t \u0111\u1ec3 ch\u1ecdn t\u1eadp tin h\u1ee3p l\u1ec7.
 
+Alert_Sieve = Ch\u1ec9 qu\u1ea3n tr\u1ecb vi\u00ean m\u1edbi c\u00f3 th\u1ec3 xem v\u00e0 s\u1eeda \u0111\u1ed5i c\u00e1c quy t\u1eafc b\u1ed9 l\u1ecdc S\u00e0ng n\u00e0y.
+LBL_zimbraAdminSieveScriptAfter = Quy t\u1eafc s\u00e0ng \u0111\u01b0\u1ee3c \u00e1p d\u1ee5ng sau b\u1ed9 l\u1ecdc ng\u01b0\u1eddi d\u00f9ng cu\u1ed1i:
+LBL_zimbraAdminSieveScriptBefore = Quy t\u1eafc s\u00e0ng \u0111\u01b0\u1ee3c \u00e1p d\u1ee5ng tr\u01b0\u1edbc b\u1ed9 l\u1ecdc ng\u01b0\u1eddi d\u00f9ng cu\u1ed1i:
+LBL_zimbraInterceptAddress = \u0110\u1ecba ch\u1ec9 ch\u1eb7n h\u1ee3p ph\u00e1p:
+LBL_zimbraInterceptSendHeadersOnly = Ch\u1ec9 ti\u00eau \u0111\u1ec1 ch\u1eb7n h\u1ee3p ph\u00e1p:
+LBL_zimbraSieveEditHeaderEnabled = Ch\u1ec9nh s\u1eeda c\u00e1c l\u1ec7nh ti\u00eau \u0111\u1ec1:
+LBL_zimbraSieveRejectMailEnabled = S\u00e0ng "t\u1eeb ch\u1ed1i" h\u00e0nh \u0111\u1ed9ng:
+NAD_AdminSieveGrouper = Quy t\u1eafc l\u1ecdc s\u00e0ng
+NAD_LegalInterceptGrouper = \u0110\u00e1nh ch\u1eb7n h\u1ee3p ph\u00e1p
