--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2780,3 +2780,13 @@ ERROR_InvalidRPLifetime = \u7bc4\u570d\u5fc5\u9808\u662f\u6b63\u6574\u6578\u3002
 ERROR_RPExists = \u539f\u5247\u300c{0}\u300d\u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u500b\u4f3a\u670d\u5668
 ERROR_INVALID_FILE_NAME = \u6a94\u6848\u540d\u7a31\u7121\u6548\u3002\u8acb\u7528\u700f\u89bd\u6309\u9215\u9078\u64c7\u6709\u6548\u7684\u6a94\u6848\u3002
+
+Alert_Sieve = \u9019\u4e9b Sieve \u904e\u6ffe\u898f\u5247\u53ea\u80fd\u7531\u7ba1\u7406\u54e1\u67e5\u770b\u548c\u4fee\u6539\u3002
+LBL_zimbraAdminSieveScriptAfter = \u5728\u6700\u7d42\u7528\u6236\u904e\u6ffe\u5668\u4e4b\u5f8c\u61c9\u7528\u7684\u7be9\u9078\u898f\u5247\uff1a
+LBL_zimbraAdminSieveScriptBefore = \u5728\u6700\u7d42\u7528\u6236\u904e\u6ffe\u5668\u4e4b\u524d\u61c9\u7528\u7684\u7be9\u9078\u898f\u5247\uff1a
+LBL_zimbraInterceptAddress = \u5408\u6cd5\u6514\u622a\u5730\u5740\uff1a
+LBL_zimbraInterceptSendHeadersOnly = \u50c5\u5408\u6cd5\u6514\u622a\u6a19\u982d\uff1a
+LBL_zimbraSieveEditHeaderEnabled = \u7de8\u8f2f\u6a19\u984c\u547d\u4ee4\uff1a
+LBL_zimbraSieveRejectMailEnabled = \u7be9\u9078\u201c\u5254\u9664\u201d\u52d5\u4f5c\uff1a
+NAD_AdminSieveGrouper = \u7be9\u7db2\u904e\u6ffe\u898f\u5247
+NAD_LegalInterceptGrouper = \u5408\u6cd5\u6514\u622a
