Update Japanese translations
Co-authored-by: Koichi Kato <32184593+k-kato@users.noreply.github.com>

--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2736,12 +2736,12 @@ ERROR_RPExists = \u30dd\u30ea\u30b7\u30fc"{0}"\u306f\u3059\u3067\u306b\u5b58\u57
 multiple_servers = \u8907\u6570\u306e\u30b5\u30fc\u30d0\u30fc
 ERROR_INVALID_FILE_NAME = \u30d5\u30a1\u30a4\u30eb\u540d\u304c\u7121\u52b9\u3067\u3059\u3002\u53c2\u7167\u30dc\u30bf\u30f3\u3092\u4f7f\u7528\u3057\u3066\u3001\u6709\u52b9\u306a\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
-Alert_Sieve = \u3053\u308c\u3089\u306e Sieve \u30d5\u30a3\u30eb\u30bf\u30fc \u30eb\u30fc\u30eb\u306f\u3001\u7ba1\u7406\u8005\u306e\u307f\u304c\u8868\u793a\u304a\u3088\u3073\u5909\u66f4\u3067\u304d\u307e\u3059\u3002
-LBL_zimbraAdminSieveScriptAfter = \u30a8\u30f3\u30c9 \u30e6\u30fc\u30b6\u30fc \u30d5\u30a3\u30eb\u30bf\u30fc\u306e\u5f8c\u306b\u9069\u7528\u3055\u308c\u308b Sieve \u30eb\u30fc\u30eb:
-LBL_zimbraAdminSieveScriptBefore = \u30a8\u30f3\u30c9 \u30e6\u30fc\u30b6\u30fc \u30d5\u30a3\u30eb\u30bf\u30fc\u306e\u524d\u306b\u9069\u7528\u3055\u308c\u308b Sieve \u30eb\u30fc\u30eb:
-LBL_zimbraInterceptAddress = \u6cd5\u7684\u508d\u53d7\u30a2\u30c9\u30ec\u30b9:
-LBL_zimbraInterceptSendHeadersOnly = \u30ea\u30fc\u30ac\u30eb \u30a4\u30f3\u30bf\u30fc\u30bb\u30d7\u30c8 \u30d8\u30c3\u30c0\u30fc\u306e\u307f:
-LBL_zimbraSieveEditHeaderEnabled = \u30d8\u30c3\u30c0\u30fc \u30b3\u30de\u30f3\u30c9\u306e\u7de8\u96c6:
-LBL_zimbraSieveRejectMailEnabled = \u3075\u308b\u3044\u300c\u62d2\u5426\u300d\u30a2\u30af\u30b7\u30e7\u30f3:
-NAD_AdminSieveGrouper = \u3075\u308b\u3044\u30d5\u30a3\u30eb\u30bf\u30fc\u898f\u5247
-NAD_LegalInterceptGrouper = \u6cd5\u7684\u508d\u53d7
+Alert_Sieve = \u3053\u308c\u3089\u306e\u30d5\u30a3\u30eb\u30bf\u30fc\u30eb\u30fc\u30eb\u306f\u3001\u7ba1\u7406\u8005\u306e\u307f\u304c\u8868\u793a\u304a\u3088\u3073\u5909\u66f4\u3067\u304d\u307e\u3059\u3002
+LBL_zimbraAdminSieveScriptAfter = \u30e6\u30fc\u30b6\u30fc\u30d5\u30a3\u30eb\u30bf\u30fc\u306e\u5f8c\u306b\u9069\u7528\u3055\u308c\u308b\u30d5\u30a3\u30eb\u30bf\u30fc\u30eb\u30fc\u30eb:
+LBL_zimbraAdminSieveScriptBefore = \u30e6\u30fc\u30b6\u30fc\u30d5\u30a3\u30eb\u30bf\u30fc\u306e\u524d\u306b\u9069\u7528\u3055\u308c\u308b\u30d5\u30a3\u30eb\u30bf\u30fc\u30eb\u30fc\u30eb:
+LBL_zimbraInterceptAddress = \u30ea\u30fc\u30ac\u30eb\u30a4\u30f3\u30bf\u30fc\u30bb\u30d7\u30c8\u30a2\u30c9\u30ec\u30b9:
+LBL_zimbraInterceptSendHeadersOnly = \u30ea\u30fc\u30ac\u30eb\u30a4\u30f3\u30bf\u30fc\u30bb\u30d7\u30c8\u30d8\u30c3\u30c0\u30fc\u306e\u307f:
+LBL_zimbraSieveEditHeaderEnabled = Edit Header \u30b3\u30de\u30f3\u30c9:
+LBL_zimbraSieveRejectMailEnabled = "reject" \u30a2\u30af\u30b7\u30e7\u30f3:
+NAD_AdminSieveGrouper = \u30d5\u30a3\u30eb\u30bf\u30fc\u898f\u5247
+NAD_LegalInterceptGrouper = \u30ea\u30fc\u30ac\u30eb\u30a4\u30f3\u30bf\u30fc\u30bb\u30d7\u30c8
